--- a/dashboard.html
+++ b/dashboard.html
@@ -10,250 +10,251 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|PT+Serif:400,700" rel="stylesheet">
 	<title>Document</title>
 </head>
+
 <body>
-
-<header>
-	<div class="wrap">
-		<div class="two-col">
-			<div class="logo">
-				<img src="img/logo-icon.svg" alt="Canou Icon Logo">
-			</div>
-			<div class="breadcrumbs">
-				<ul>
-					<li><a href="#"><strong>New Dog Food</strong></a></li>
-					<li><a href="#"><strong>Week 7</strong></a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="two-col">
-			<div class="nav-tools">
-				<ul>
-					<li><button class="menu-icon-btn"><img src="img/icon-activity.svg" alt=""></button></li>
-					<li><button class="menu-icon-btn"><img src="img/icon-chat.svg" alt=""></button></li>
-					<li><button class="menu-icon-btn"><img src="img/icon-invite.svg" alt=""></button></li>
-					<li><button class="profile-btn">Jessica<div class="bg-img" style="background-image: url('img/profile1.png');"></div></button></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</header>
-
-<!-- Canvas Grid -->
-<section>
-	<div class="wrap">
-		<div class="canvas-grid">
-			<button class="bg-blue-add-btn">+</button>
-			<!-- Key Partners Column -->
-			<div class="col col-x2">
-				<div class="cell">
-					<div class="top">
-						<p class="txt10 serif">Key Partners</p>
-						<div class="count active"><p>12</p></div>
-					</div>
-					<div class="bottom scroll-content">
-						<div class="listed-hypothesis active">Food Producers</div>
-						<button class="dashed-blue-btn">Add Hypothesis</button>
-					</div>
+<div class="main-content">
+	<header>
+		<div class="wrap">
+			<div class="two-col">
+				<div class="logo">
+					<img src="img/logo-icon.svg" alt="Canou Icon Logo">
+				</div>
+				<div class="breadcrumbs">
+					<ul>
+						<li><a href="#"><strong>New Dog Food</strong></a></li>
+						<li><a href="#"><strong>Week 7</strong></a></li>
+					</ul>
 				</div>
 			</div>
-			<!-- Key Activities & Key Resources Column -->
-			<div class="col">
-				<div class="cell">
-					<div class="top">
-						<p class="txt10 serif">Key Activities</p>
-						<div class="count active"><p>7</p></div>
-					</div>
-					<div class="bottom scroll-content">
-						<div class="listed-hypothesis active">Buying Supplies</div>
-						<div class="listed-hypothesis active">Marketing</div>
-						<div class="listed-hypothesis tag purple-tag">Platform Management</div>
-						<button class="dashed-blue-btn">Add Hypothesis</button>
-					</div>
-				</div>
-				<div class="cell scroll-content scroll-content">
-					<div class="top">
-						<p class="txt10 serif">Key Resources</p>
-						<div class="count"><p>0</p></div>
-					</div>
-					<div class="bottom scroll-content">
-						<div class="listed-hypothesis tag orange-tag active">Digital Platform</div>
-						<div class="listed-hypothesis tag orange-tag active">Organic Food Supply</div>
-						<button class="dashed-blue-btn">Add Hypothesis</button>
-					</div>
-				</div>
-			</div>
-			<!-- Value Proposition Column -->
-			<div class="col col-x2">
-				<div class="hover-col">
-					<div class="bg-cyan">
-						<p class="serif mb20"><strong>Clarify your Hypothesis</strong></p>
-						<p>Start now, it’ll take you 10 min.</p>
-						<button class="bg-white-rounded-btn c-cyan" name="button">Start</button>
-					</div>
-				</div>
-				<div class="cell col-x2">
-					<div class="top">
-						<p class="txt10 serif">Value Proposition</p>
-						<div class="count active"><p>21</p></div>
-					</div>
-					<div class="bottom scroll-content scroll-content">
-						<div class="listed-hypothesis tag red-tag">Improve’s pet health</div>
-						<div class="listed-hypothesis active">Comfortable & Time Saver</div>
-						<div class="listed-hypothesis tag green-tag">Buying Supplies</div>
-						<div class="listed-hypothesis">Platform Management</div>
-						<button class="dashed-blue-btn">Add Hypothesis</button>
-					</div>
-				</div>
-			</div>
-			<!-- Customer Relation... & Channels Column -->
-			<div class="col">
-				<div class="cell">
-					<div class="top">
-						<p class="txt10 serif">Customer Relation...</p>
-						<div class="count active"><p>4</p></div>
-					</div>
-					<div class="bottom scroll-content">
-						<div class="listed-hypothesis">Frequent Customer Program</div>
-						<div class="listed-hypothesis tag red-tag">Food Sampling in Key Places</div>
-						<button class="dashed-blue-btn">Add Hypothesis</button>
-					</div>
-				</div>
-				<div class="cell scroll-content scroll-content">
-					<div class="top">
-						<p class="txt10 serif">Channels</p>
-						<div class="count"><p>0</p></div>
-					</div>
-					<div class="bottom scroll-content">
-						<div class="listed-hypothesis active">Online Sell</div>
-						<button class="dashed-blue-btn">Add Hypothesis</button>
-					</div>
-				</div>
-			</div>
-			<!-- Customer Segments Column -->
-			<div class="col">
-				<div class="cell col-x2 scroll-content">
-					<div class="top">
-						<p class="txt10 serif">Customer Segments</p>
-						<div class="count"><p>0</p></div>
-					</div>
-					<div class="bottom scroll-content">
-						<div class="listed-hypothesis tag blue-tag">  Dog Owners</div>
-						<button class="dashed-blue-btn">Add Hypothesis</button>
-					</div>
-				</div>
-			</div>
-			<!-- Cost Structure Column -->
-			<div class="col">
-				<div class="cell horizontal-x2 scroll-content">
-					<div class="top">
-						<p class="txt10 serif">Cost Structure</p>
-						<div class="count"><p>0</p></div>
-					</div>
-					<div class="bottom scroll-content">
-						<div class="listed-hypothesis">Distribution</div>
-						<div class="listed-hypothesis tag blue-tag">Supplies Purchases</div>
-						<div class="listed-hypothesis">Marketing</div>
-						<button class="dashed-blue-btn">Add Hypothesis</button>
-					</div>
-				</div>
-			</div>
-			<!-- Revenue Stream Column -->
-			<div class="col">
-				<div class="cell horizontal-x2 scroll-content">
-					<div class="top">
-						<p class="txt10 serif">Revenue Stream</p>
-						<div class="count"><p>0</p></div>
-					</div>
-					<div class="bottom scroll-content">
-						<div class="listed-hypothesis tag blue-tag">Product Sales</div>
-						<button class="dashed-blue-btn">Add Hypothesis</button>
-					</div>
+			<div class="two-col">
+				<div class="nav-tools">
+					<ul>
+						<li><button class="menu-icon-btn"><img src="img/icon-activity.svg" alt=""></button></li>
+						<li><button class="menu-icon-btn"><img src="img/icon-chat.svg" alt=""></button></li>
+						<li><button class="menu-icon-btn"><img src="img/icon-invite.svg" alt=""></button></li>
+						<li><button class="profile-btn">Jessica<div class="bg-img" style="background-image: url('img/profile1.png');"></div></button></li>
+					</ul>
 				</div>
 			</div>
 		</div>
+	</header>
 
-		<!-- Canvas Assistant Block -->
-		<div class="canvas-progress-assistant">
-			<div class="top">
-				<button class="question-mark-btn">?</button>
-				<div class="title"><p class="serif c-dark-purple-opacity txt14">Your Progress</p></div>
-				<button class="small-yellow-rounded-btn">learn</button>
-			</div>
-			<div class="bottom">
-				<div class="to-do active">Fill your first draft of the Canvas</div>
-				<div class="to-do active">Start the process of Customer Discovery</div>
-				<div class="to-do active">Document your first Interview</div>
-				<div class="to-do active">Validate / Invalidate Hypothesis</div>
-				<div class="to-do active">Clarify Hypothesis</div>
-				<div class="to-do up-next">Invite Collaborators</div>
-				<div class="to-do">Invite Collaborators</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<footer>
-	<div class="wrap">
-		<div class="table one-col">
-			<div class="three-col align-middle">
-				<div class="table">
-					<div class="table-cell align-middle pr-100">
-						<button class="serif-txt-btn">Weekly Goals</button>
-					</div>
-					<div class="table-cell align-middle">
-						<div class="circle-progress-bar columns">
-							<div id="cont" class="bg-expert-img" data-pct="100">
-								<div class="bg-glow"></div>
-								<svg id="svg" width="60" height="60" viewport="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg">
-									<circle r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="200" stroke-dashoffset="0"></circle>
-									<circle id="bar" r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="124" stroke-dashoffset="0" style="stroke-dashoffset: 200px;"></circle>
-								</svg>
-							</div>
-							<p class="txt12"><strong id="number" >10</strong> Customers</p>
+	<!-- Canvas Grid -->
+	<section>
+		<div class="wrap">
+			<div class="canvas-grid">
+				<button class="bg-blue-add-btn">+</button>
+				<!-- Key Partners Column -->
+				<div class="col col-x2">
+					<div class="cell">
+						<div class="top">
+							<p class="txt10 serif">Key Partners</p>
+							<div class="count active"><p>12</p></div>
 						</div>
-						<div class="circle-progress-bar columns">
-							<div id="cont" class="bg-customer-img" data-pct="100">
-								<div class="bg-glow"></div>
-								<svg id="svg" width="60" height="60" viewport="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg">
-									<circle r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="200" stroke-dashoffset="0"></circle>
-									<circle id="bar" r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="124" stroke-dashoffset="0" style="stroke-dashoffset: 200px;"></circle>
-								</svg>
-							</div>
-							<p class="txt12"><strong id="number">60</strong> Customers</p>
+						<div class="bottom scroll-content">
+							<div class="listed-hypothesis active">Food Producers</div>
+							<button class="dashed-blue-btn">Add Hypothesis</button>
 						</div>
-						<div class="progress-bar-wrap">
-							<div class="progress-bar">
-								<div class="bg-green b-radius-left" style="width:22%;">
-									<p class="txt14"><strong>22</strong></p>
-								</div>
-								<div class="bg-transparent" style="width:40%;">
-									<p class="txt14"><strong>8</strong></p>
-								</div>
-								<div class="bg-red b-radius-right" style="width:38%;">
-									<p class="txt14"><strong>38</strong></p>
-								</div>
-							</div>
-							<p class="txt12"><strong>8</strong> Hypothesis not yet backed</p>
+					</div>
+				</div>
+				<!-- Key Activities & Key Resources Column -->
+				<div class="col">
+					<div class="cell">
+						<div class="top">
+							<p class="txt10 serif">Key Activities</p>
+							<div class="count active"><p>7</p></div>
+						</div>
+						<div class="bottom scroll-content">
+							<div class="listed-hypothesis active">Buying Supplies</div>
+							<div class="listed-hypothesis active">Marketing</div>
+							<div class="listed-hypothesis tag purple-tag">Platform Management</div>
+							<button class="dashed-blue-btn">Add Hypothesis</button>
+						</div>
+					</div>
+					<div class="cell scroll-content scroll-content">
+						<div class="top">
+							<p class="txt10 serif">Key Resources</p>
+							<div class="count"><p>0</p></div>
+						</div>
+						<div class="bottom scroll-content">
+							<div class="listed-hypothesis tag orange-tag active">Digital Platform</div>
+							<div class="listed-hypothesis tag orange-tag active">Organic Food Supply</div>
+							<button class="dashed-blue-btn">Add Hypothesis</button>
+						</div>
+					</div>
+				</div>
+				<!-- Value Proposition Column -->
+				<div class="col col-x2">
+					<div class="hover-col">
+						<div class="bg-cyan">
+							<p class="serif mb20"><strong>Clarify your Hypothesis</strong></p>
+							<p>Start now, it’ll take you 10 min.</p>
+							<button class="bg-white-rounded-btn c-cyan" name="button">Start</button>
+						</div>
+					</div>
+					<div class="cell col-x2">
+						<div class="top">
+							<p class="txt10 serif">Value Proposition</p>
+							<div class="count active"><p>21</p></div>
+						</div>
+						<div class="bottom scroll-content scroll-content">
+							<div class="listed-hypothesis tag red-tag">Improve’s pet health</div>
+							<div class="listed-hypothesis active">Comfortable & Time Saver</div>
+							<div class="listed-hypothesis tag green-tag">Buying Supplies</div>
+							<div class="listed-hypothesis">Platform Management</div>
+							<button class="dashed-blue-btn">Add Hypothesis</button>
+						</div>
+					</div>
+				</div>
+				<!-- Customer Relation... & Channels Column -->
+				<div class="col">
+					<div class="cell">
+						<div class="top">
+							<p class="txt10 serif">Customer Relation...</p>
+							<div class="count active"><p>4</p></div>
+						</div>
+						<div class="bottom scroll-content">
+							<div class="listed-hypothesis">Frequent Customer Program</div>
+							<div class="listed-hypothesis tag red-tag">Food Sampling in Key Places</div>
+							<button class="dashed-blue-btn">Add Hypothesis</button>
+						</div>
+					</div>
+					<div class="cell scroll-content scroll-content">
+						<div class="top">
+							<p class="txt10 serif">Channels</p>
+							<div class="count"><p>0</p></div>
+						</div>
+						<div class="bottom scroll-content">
+							<div class="listed-hypothesis active">Online Sell</div>
+							<button class="dashed-blue-btn">Add Hypothesis</button>
+						</div>
+					</div>
+				</div>
+				<!-- Customer Segments Column -->
+				<div class="col">
+					<div class="cell col-x2 scroll-content">
+						<div class="top">
+							<p class="txt10 serif">Customer Segments</p>
+							<div class="count"><p>0</p></div>
+						</div>
+						<div class="bottom scroll-content">
+							<div class="listed-hypothesis tag blue-tag">  Dog Owners</div>
+							<button class="dashed-blue-btn">Add Hypothesis</button>
+						</div>
+					</div>
+				</div>
+				<!-- Cost Structure Column -->
+				<div class="col">
+					<div class="cell horizontal-x2 scroll-content">
+						<div class="top">
+							<p class="txt10 serif">Cost Structure</p>
+							<div class="count"><p>0</p></div>
+						</div>
+						<div class="bottom scroll-content">
+							<div class="listed-hypothesis">Distribution</div>
+							<div class="listed-hypothesis tag blue-tag">Supplies Purchases</div>
+							<div class="listed-hypothesis">Marketing</div>
+							<button class="dashed-blue-btn">Add Hypothesis</button>
+						</div>
+					</div>
+				</div>
+				<!-- Revenue Stream Column -->
+				<div class="col">
+					<div class="cell horizontal-x2 scroll-content">
+						<div class="top">
+							<p class="txt10 serif">Revenue Stream</p>
+							<div class="count"><p>0</p></div>
+						</div>
+						<div class="bottom scroll-content">
+							<div class="listed-hypothesis tag blue-tag">Product Sales</div>
+							<button class="dashed-blue-btn">Add Hypothesis</button>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="third-col t-right">
-				<div class="one-col">
-					<button class="bg-white-rounded-btn mb20">New Interview</button>
+
+			<!-- Canvas Assistant Block -->
+			<div class="canvas-progress-assistant">
+				<div class="top">
+					<button class="question-mark-btn">?</button>
+					<div class="title"><p class="serif c-dark-purple-opacity txt14">Your Progress</p></div>
+					<button class="small-yellow-rounded-btn">learn</button>
 				</div>
-				<div class="one-col">
-					<button class="white-opacity-txt-btn">All Interviews</button>
+				<div class="bottom">
+					<div class="to-do active">Fill your first draft of the Canvas</div>
+					<div class="to-do active">Start the process of Customer Discovery</div>
+					<div class="to-do active">Document your first Interview</div>
+					<div class="to-do active">Validate / Invalidate Hypothesis</div>
+					<div class="to-do active">Clarify Hypothesis</div>
+					<div class="to-do up-next">Invite Collaborators</div>
+					<div class="to-do">Invite Collaborators</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</footer>
+	</section>
 
-<!-- LIBRARIES -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="js/jquery.mCustomScrollbar.min.js"></script>
-<script src="js/scripts.js"></script>
+	<footer>
+		<div class="wrap">
+			<div class="table one-col">
+				<div class="three-col align-middle">
+					<div class="table">
+						<div class="table-cell align-middle pr-100">
+							<button class="serif-txt-btn">Weekly Goals</button>
+						</div>
+						<div class="table-cell align-middle">
+							<div class="circle-progress-bar columns">
+								<div id="cont" class="bg-expert-img" data-pct="100">
+									<div class="bg-glow"></div>
+									<svg id="svg" width="60" height="60" viewport="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg">
+										<circle r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="200" stroke-dashoffset="0"></circle>
+										<circle id="bar" r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="124" stroke-dashoffset="0" style="stroke-dashoffset: 200px;"></circle>
+									</svg>
+								</div>
+								<p class="txt12"><strong id="number" >90</strong> Customers</p>
+							</div>
+							<div class="circle-progress-bar columns">
+								<div id="cont" class="bg-customer-img" data-pct="100">
+									<div class="bg-glow"></div>
+									<svg id="svg" width="60" height="60" viewport="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg">
+										<circle r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="200" stroke-dashoffset="0"></circle>
+										<circle id="bar" r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="124" stroke-dashoffset="0" style="stroke-dashoffset: 200px;"></circle>
+									</svg>
+								</div>
+								<p class="txt12"><strong id="number">100</strong> Customers</p>
+							</div>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar">
+									<div class="bg-green b-radius-left" style="width:22%;">
+										<p class="txt14"><strong>22</strong></p>
+									</div>
+									<div class="bg-transparent" style="width:40%;">
+										<p class="txt14"><strong>8</strong></p>
+									</div>
+									<div class="bg-red b-radius-right" style="width:38%;">
+										<p class="txt14"><strong>38</strong></p>
+									</div>
+								</div>
+								<p class="txt12"><strong>8</strong> Hypothesis not yet backed</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="third-col t-right">
+					<div class="one-col">
+						<button class="bg-white-rounded-btn mb20">New Interview</button>
+					</div>
+					<div class="one-col">
+						<button class="white-opacity-txt-btn">All Interviews</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
+	<!-- LIBRARIES -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="js/jquery.mCustomScrollbar.min.js"></script>
+	<script src="js/scripts.js"></script>
+</div>
 </body>
 </html>
