--- a/dashboard.html
+++ b/dashboard.html
@@ -41,7 +41,7 @@
 
 	<!-- Canvas Grid -->
 	<section>
-		<div class="wrap">
+		<div class="wrap overflow-hidden">
 			<div class="canvas-grid">
 				<button class="bg-blue-add-btn">+</button>
 				<!-- Key Partners Column -->
@@ -131,7 +131,7 @@
 					</div>
 				</div>
 				<!-- Customer Segments Column -->
-				<div class="col">
+				<div class="col col-x2">
 					<div class="cell col-x2 scroll-content">
 						<div class="top">
 							<p class="txt10 serif">Customer Segments</p>
@@ -144,7 +144,7 @@
 					</div>
 				</div>
 				<!-- Cost Structure Column -->
-				<div class="col">
+				<div class="col col-vertical">
 					<div class="cell horizontal-x2 scroll-content">
 						<div class="top">
 							<p class="txt10 serif">Cost Structure</p>
@@ -159,7 +159,7 @@
 					</div>
 				</div>
 				<!-- Revenue Stream Column -->
-				<div class="col">
+				<div class="col col-vertical">
 					<div class="cell horizontal-x2 scroll-content">
 						<div class="top">
 							<p class="txt10 serif">Revenue Stream</p>
@@ -174,6 +174,14 @@
 			</div>
 
 			<!-- Canvas Assistant Block -->
+			<div class="trigger-assistant-status">
+				<div class="one-col mb20">
+					<button class="question-mark-btn">?</button>
+				</div>
+				<div class="one-col mb20">
+					<button class="small-yellow-rounded-btn">learn</button>
+				</div>
+			</div>
 			<div class="canvas-progress-assistant">
 				<div class="top">
 					<button class="question-mark-btn">?</button>
