Dashboard.html: Added arrow buttons on header and footer

--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
 				<div class="breadcrumbs">
 					<ul>
 						<li><a href="#"><strong>New Dog Food</strong></a></li>
-						<li><a href="#"><strong>Week 7</strong></a></li>
+						<li><a href="#"><strong>Week 7</strong></a><button class="down-arrow-x1-btn"></button></li>
 					</ul>
 				</div>
 			</div>
@@ -248,11 +248,16 @@
 					</div>
 				</div>
 				<div class="third-col t-right">
-					<div class="one-col">
-						<button class="bg-white-rounded-btn mb20">New Interview</button>
+					<div class="two-col">
+						<button class="down-arrow-btn"></button>
 					</div>
-					<div class="one-col">
-						<button class="white-opacity-txt-btn">All Interviews</button>
+					<div class="two-col">
+						<div class="one-col">
+							<button class="bg-white-rounded-btn mb20">New Interview</button>
+						</div>
+						<div class="one-col">
+							<button class="white-opacity-txt-btn">All Interviews</button>
+						</div>
 					</div>
 				</div>
 			</div>
