--- a/pop-ups.html
+++ b/pop-ups.html
@@ -383,6 +383,252 @@
 	</div>
 </div>
 
+
+<div class="full-menu-modal">
+	<!-- header -->
+	<div class="top-content">
+		<div class="table one-col">
+			<div class="three-col align-middle">
+				<div class="table">
+					<div class="table-cell align-middle pr-100">
+						<button class="serif-txt-btn">Weekly Goals</button>
+					</div>
+					<div class="table-cell align-middle">
+						<div class="circle-progress-bar columns">
+							<div id="cont" class="bg-expert-img" data-pct="100">
+								<div class="bg-glow"></div>
+								<svg id="svg" width="60" height="60" viewport="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg">
+									<circle r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="200" stroke-dashoffset="0"></circle>
+									<circle id="bar" r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="124" stroke-dashoffset="0" style="stroke-dashoffset: 200px;"></circle>
+								</svg>
+							</div>
+							<p class="txt12"><strong id="number" >90</strong> Customers</p>
+						</div>
+						<div class="circle-progress-bar columns">
+							<div id="cont" class="bg-customer-img" data-pct="100">
+								<div class="bg-glow"></div>
+								<svg id="svg" width="60" height="60" viewport="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg">
+									<circle r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="200" stroke-dashoffset="0"></circle>
+									<circle id="bar" r="20" cx="30" cy="30" fill="transparent" stroke-dasharray="124" stroke-dashoffset="0" style="stroke-dashoffset: 200px;"></circle>
+								</svg>
+							</div>
+							<p class="txt12"><strong id="number">100</strong> Customers</p>
+						</div>
+						<div class="progress-bar-wrap">
+							<div class="progress-bar">
+								<div class="bg-green b-radius-left" style="width:22%;">
+									<p class="txt14"><strong>22</strong></p>
+								</div>
+								<div class="bg-transparent" style="width:40%;">
+									<p class="txt14"><strong>8</strong></p>
+								</div>
+								<div class="bg-red b-radius-right" style="width:38%;">
+									<p class="txt14"><strong>38</strong></p>
+								</div>
+							</div>
+							<p class="txt12"><strong>8</strong> Hypothesis not yet backed</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="third-col t-right">
+				<div class="two-col">
+					<button class="up-arrow-btn"></button>
+				</div>
+				<div class="two-col">
+					<div class="one-col">
+						<button class="bg-white-rounded-btn">New Interview</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- bottom content -->
+	<div class="one-col bottom-content">
+		<div class="third-col">
+			<div class="one-col mb20">
+				<div class="one-third txt14 serif"><p>Interviews</p></div>
+				<div class="three-col txt12 c-white-opacity">
+					<strong class="right-gutter">4 News</strong><span class="right-gutter">14 Experts</span> <span class="right-gutter">42 Total</span>
+				</div>
+			</div>
+			<div class="one-col scroll-content-white">
+				<table>
+					<tr>
+						<td><p><strong>Inés Cruz</strong></p></td>
+						<td><p><strong>Customer</strong></p></td>
+						<td><p><strong>4 Key Insights</strong></p></td>
+					</tr>
+					<tr>
+						<td><p><strong>Javier Morales</strong></p></td>
+						<td><p><strong>Customer</strong></p></td>
+						<td><p><strong>2 Key Insights</strong></p></td>
+					</tr>
+					<tr>
+						<td><p><strong>Alan Real</strong></p></td>
+						<td><p><strong>Expert</strong></p></td>
+						<td><p><strong>1 Key Insight</strong></p></td>
+					</tr>
+					<tr>
+						<td><p><strong>Alan</strong></p></td>
+						<td><p><strong>Expert</strong></p></td>
+						<td><p><strong>1 Key Insight</strong></p></td>
+					</tr>
+					<tr>
+						<td><p>Roberto Ross</p></td>
+						<td><p>Customer</p></td>
+						<td><p>8 Key Insight</p></td>
+					</tr>
+					<tr>
+						<td><p>Inés Cruz</p></td>
+						<td><p>Customer</p></td>
+						<td><p>4 Key Insights</p></td>
+					</tr>
+					<tr>
+						<td><p>Javier Morales</p></td>
+						<td><p>Customer</p></td>
+						<td><p>2 Key Insights</p></td>
+					</tr>
+					<tr>
+						<td><p>Alan Real</p></td>
+						<td><p>Expert</p></td>
+						<td><p>1 Key Insight</p></td>
+					</tr>
+					<tr>
+						<td><p>Alan</p></td>
+						<td><p>Expert</p></td>
+						<td><p>1 Key Insight</p></td>
+					</tr>
+					<tr>
+						<td><p>Roberto Ross</p></td>
+						<td><p>Customer</p></td>
+						<td><p>8 Key Insight</p></td>
+					</tr>
+					<tr>
+						<td><p>Inés Cruz</p></td>
+						<td><p>Customer</p></td>
+						<td><p>4 Key Insights</p></td>
+					</tr>
+					<tr>
+						<td><p>Javier Morales</p></td>
+						<td><p>Customer</p></td>
+						<td><p>2 Key Insights</p></td>
+					</tr>
+					<tr>
+						<td><p>Alan Real</p></td>
+						<td><p>Expert</p></td>
+						<td><p>1 Key Insight</p></td>
+					</tr>
+					<tr>
+						<td><p>Alan</p></td>
+						<td><p>Expert</p></td>
+						<td><p>1 Key Insight</p></td>
+					</tr>
+					<tr>
+						<td><p>Inés Cruz</p></td>
+						<td><p>Customer</p></td>
+						<td><p>4 Key Insights</p></td>
+					</tr>
+					<tr>
+						<td><p>Javier Morales</p></td>
+						<td><p>Customer</p></td>
+						<td><p>2 Key Insights</p></td>
+					</tr>
+					<tr>
+						<td><p>Alan Real</p></td>
+						<td><p>Expert</p></td>
+						<td><p>1 Key Insight</p></td>
+					</tr>
+					<tr>
+						<td><p>Alan</p></td>
+						<td><p>Expert</p></td>
+						<td><p>1 Key Insight</p></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div class="three-col scroll-content-white">
+			<div class="one-col mb40">
+				<p class="txt14 serif mb20">Weekly Scores</p>
+				<div class="scores-graph mb20">
+					<div class="col">
+						<div class="top">
+							<p style="bottom: 30%;">3</p>
+						</div>
+						<div class="bottom">
+							<p><strong>Last Week</strong></p>
+						</div>
+					</div>
+					<div class="col">
+						<div class="top">
+							<p style="bottom: 60%;">6</p>
+						</div>
+						<div class="bottom">
+							<p style="bottom: 50%;">6</p>
+						</div>
+					</div>
+					<div class="col">
+						<div class="top">
+							<p style="bottom: 100%;">10</p>
+						</div>
+						<div class="bottom">
+							<p>5</p>
+						</div>
+					</div>
+					<div class="col active">
+						<div class="top">
+							<p style="bottom: 0;">0</p>
+						</div>
+						<div class="bottom">
+							<p>4</p>
+						</div>
+					</div>
+					<div class="col">
+						<div class="top">
+							<p style="bottom: 50%;">5</p>
+						</div>
+						<div class="bottom">
+							<p>3</p>
+						</div>
+					</div>
+					<div class="col">
+						<div class="top">
+							<p style="bottom: 70%;">7</p>
+						</div>
+						<div class="bottom">
+							<p>2</p>
+						</div>
+					</div>
+					<div class="col">
+						<div class="top">
+							<p style="bottom: 20%;">2</p>
+						</div>
+						<div class="bottom">
+							<p>1</p>
+						</div>
+					</div>
+				</div>
+				<div class="one-col">
+					<button class="bg-gray-rounded-btn">Upoload presentation</button>
+				</div>
+			</div>
+			<div class="one-col mb40">
+				<p class="txt14 serif mb30">Mentor Observations: <strong>Week 4</strong></p>
+				<div class="hypothesis-comment ltr blue-comment mb20">
+					<div class="message">
+						<p class="serif">Donec ac efficitur purus. Donec volutpat sapien id cursus rutrum. Suspendisse in fermentum elit. Aliquam eleifend purus vel nulla congue dignissim. Integer nisl tortor, ornare in quam eu, posuere ultrices ligula.</p>
+						<div class="author">
+							<div class="profile" style="background-image: url('img/profile1.png');"></div>
+							<p class="txt14">by <strong>Javier</strong> at 12:23pm on Jan 26, 2017</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
 <!-- LIBRARIES -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="js/jquery.mCustomScrollbar.min.js"></script>
