Pop-ups.html: Added Hypothesis Quiz modals

--- a/pop-ups.html
+++ b/pop-ups.html
@@ -320,6 +320,198 @@
 	</div>
 </div>
 
+<!-- DEEP DIVE MODAL - START -->
+<div class="one-col mb50">
+	<div class="hypothesis-modal">
+		<button class="gray-close-btn"></button>
+		<div class="odd-half-col bg-dark-purple-opacity8 table-cell">
+			<div class="one-col p24">
+				<p class="c-white-opacity serif">Value Proposition</p>
+				<h2 class="c-white"><strong>Improves Pet’s Health</strong></h2>
+			</div>
+			<div class="one-col p24">
+				<div class="hypothesis-quiz-wrap scroll-content">
+					<h2 class="c-white mb20">1. <strong>¿What value do you deliver to your customer?</strong></h2>
+					<textarea class="input-text" placeholder="Add your answer here"></textarea>
+				</div>
+			</div>
+			<div class="one-col plr24">
+				<button class="green-btn f-left">Next question</button>
+				<p class="c-light-purple p-btn f-left txt14"><strong>1</strong> / 5</p>
+			</div>
+		</div>
+		<div class="odd-third-col bg-dark-purple table-cell">
+			<div class="one-col p24">
+				<ul class="specs-tabs">
+					<li><button class="white-border-small-btn">←</button></li>
+					<li><button class="white-border-small-btn active">Deep Dive</button></li>
+				</ul>
+			</div>
+			<div class="one-col plr24">
+				<div class="hypothesis-specs scroll-content-white">
+					<div class="one-col mb20">
+						<p class="c-white txt14">1. What value do you deliver to your customer?</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">2. Which of the customer’s problems are you solving?</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">3. Which client’s needs are you helping satisfy?</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">4. Which service/product are ypu offering to each of your customer segments?</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">5. Which qualities of your product/service align with the needs/problems of your customer?</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">6. Which client’s needs are you helping satisfy?</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">7. Which service/product are ypu offering to each of your customer segments?</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">8. Which qualities of your product/service align with the needs/problems of your customer?</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">9. Which qualities of your product/service align with the needs/problems of your customer?</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- DEEP DIVE MODAL - ANSWERING QUIZ -->
+<div class="one-col mb50">
+	<div class="hypothesis-modal">
+		<button class="gray-close-btn"></button>
+		<div class="odd-half-col bg-dark-purple-opacity8 table-cell">
+			<div class="one-col p24">
+				<p class="c-white-opacity serif">Value Proposition</p>
+				<h2 class="c-white"><strong>Improves Pet’s Health</strong></h2>
+			</div>
+			<div class="one-col p24">
+				<div class="hypothesis-quiz-wrap scroll-content-white">
+					<h2 class="c-white mb20">5. <strong>¿Cuáles de las características clave de tu producto/servicio se ajustan a los problemas/necesidades del cliente?</strong></h2>
+					<textarea class="input-text" placeholder="Add your answer here"></textarea>
+				</div>
+			</div>
+			<div class="one-col plr24">
+				<button class="green-btn f-left">Next question</button>
+				<p class="c-light-purple p-btn f-left txt14"><strong>1</strong> / 5</p>
+			</div>
+		</div>
+		<div class="odd-third-col bg-dark-purple table-cell">
+			<div class="one-col p24">
+				<ul class="specs-tabs">
+					<li><button class="white-border-small-btn">←</button></li>
+					<li><button class="white-border-small-btn active">Deep Dive</button></li>
+				</ul>
+			</div>
+			<div class="one-col plr24">
+				<div class="hypothesis-specs scroll-content-white">
+					<div class="one-col mb20">
+						<p class="c-white txt14">1.<strong> What value do you deliver to your customer?</strong></p>
+						<p class="c-white txt14">I’m offering optimum nutrition to his or her pets</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">2. <strong>Which of the customer’s problems are you solving?</strong></p>
+						<p class="c-white txt14">The challenge of my custoer to find a really nutritious meal for his/her pet</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">3. <strong>Which client’s needs are you helping satisfy?</strong></p>
+						<p class="c-white txt14">His/her pet’s health</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">4. <strong>Which service/product are ypu offering to each of your customer segments?</strong></p>
+						<p class="c-white txt14">Selected flavors for different races</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">5. Which qualities of your product/service align with the needs/problems of your customer?</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- DEEP DIVE MODAL - ANSWERED -->
+<div class="one-col mb50">
+	<div class="hypothesis-modal">
+		<button class="gray-close-btn"></button>
+		<div class="half-col">
+			<div class="one-col p24">
+				<div class="half-col right-gutter">
+					<select class="input-x1">
+						<option value="first">Value Proposition</option>
+					</select>
+				</div>
+				<div class="half-col">
+					<select class="input-x1">
+						<option value="first">Week 1</option>
+					</select>
+				</div>
+			</div>
+			<div class="one-col ptrl24">
+				<div class="hypothesis-wrap scroll-content">
+					<button class="remove-gray-btn mb20 active">
+						<div class="gray-close-btn"></div><p class="c-dark-purple">Improves Pet’s Health</p><p class="c-green txt12">Valid by 1 Insight</p>
+					</button>
+					<button class="remove-gray-btn mb20">
+						<div class="gray-close-btn"></div><p class="c-dark-purple">Comfort & Time Saver</p><p class="c-dark-purple-opacity txt12">Not yet Valid</p>
+					</button>
+					<button class="remove-gray-btn mb20">
+						<div class="gray-close-btn"></div><p class="c-dark-purple">Need supplies by pet</p><p class="c-dark-purple-opacity txt12">Not yet Valid</p>
+					</button>
+					<button class="dashed-gray-btn c-cyan mb20"> <div class="bg-blue-add-btn m-right">+</div>Add New Hypothesis</button>
+				</div>
+			</div>
+			<button class="dark-purple-opacity-btn f-left p24 txt14">View valid hypothesis</button>
+		</div>
+		<div class="half-col bg-dark-purple table-cell">
+			<div class="one-col p24">
+				<ul class="specs-tabs">
+					<li><button class="white-border-small-btn">Key Insights</button></li>
+					<li><button class="white-border-small-btn active">Deep Dive</button></li>
+					<li><button class="white-border-small-btn chat-btn">12</button></li>
+					<li><button class="white-border-small-btn">Help</button></li>
+				</ul>
+			</div>
+			<div class="one-col plr24">
+				<div class="hypothesis-specs scroll-content-white">
+					<div class="one-col mb20">
+						<div class="hypothesis-author-field">
+							<div class="author">
+								<div class="profile" style="background-image: url('img/profile1.png');"></div>
+								<p class="txt14">by <strong>Javier</strong> at 12:23pm on Jan 26, 2017</p>
+							</div>
+						</div>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">1.<strong> What value do you deliver to your customer?</strong></p>
+						<p class="c-white txt14">I’m offering optimum nutrition to his or her pets</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">2. <strong>Which of the customer’s problems are you solving?</strong></p>
+						<p class="c-white txt14">The challenge of my custoer to find a really nutritious meal for his/her pet</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">3. <strong>Which client’s needs are you helping satisfy?</strong></p>
+						<p class="c-white txt14">His/her pet’s health</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">4. <strong>Which service/product are ypu offering to each of your customer segments?</strong></p>
+						<p class="c-white txt14">Selected flavors for different races</p>
+					</div>
+					<div class="one-col mb20">
+						<p class="c-white txt14">5. Which qualities of your product/service align with the needs/problems of your customer?</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 <!-- NEW HYPOTHESIS DEEP DIVE MODAL -->
 <div class="one-col mb50">
