Pop-ups.html: Added modal views for add collaborator, add key insight, asign presentation

--- a/pop-ups.html
+++ b/pop-ups.html
@@ -821,9 +821,284 @@
 </div>
 
 
+<div class="one-col mb50 p24">
+	<div class="half-col columns">
+		<!-- NEW HYPOTHESIS DEEP DIVE MODAL -->
+		<div class="key-insight-modal">
+			<div class="one-col mb20">
+				<p class="mb20"><strong>Add New Key Insight</strong></p>
+				<textarea class="textarea-input input-x1 serif c-dark-purple" placeholder="Add your comment">I usually aske them to deliver it to my home, because I really hate the traffic near the stores (and the traffic in general!)</textarea>
+			</div>
+			<div class="one-col mb20">
+				<p class="mb20"><strong>Add key insight to:</strong></p>
+				<div class="half-col right-gutter">
+					<select class="input-x1">
+						<option value="first">Select Canvas Area</option>
+					</select>
+				</div>
+				<div class="half-col column">
+					<select class="input-x1">
+						<option value="first">Select Hypothesis</option>
+					</select>
+				</div>
+			</div>
+			<div class="one-col mb20">
+				<p class="mb20"><strong>This insight:</strong></p>
+				<div class="half-col">
+					<div class="one-col mb10">
+						<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character0" value="customer"><span class="check"></span></div>
+						<p>is a <strong>Must have</strong></p>
+					</div>
+					<div class="one-col mb10">
+						<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character0" value="customer"><span class="check"></span></div>
+						<p>is a <strong>Nice to have</strong></p>
+					</div>
+					<div class="one-col mb10">
+						<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character0" value="customer"><span class="check"></span></div>
+						<p><strong>Invalidates</strong> the Hypothesis</p>
+					</div>
+				</div>
+				<div class="half-col">
+					<div class="small-canvas-grid">
+						<div class="col col-x2">
+							<p>P</p>
+						</div>
+						<div class="col-x2">
+							<div class="col col-x1">
+								<p>A</p>
+							</div>
+							<div class="col col-x1">
+								<p>R</p>
+							</div>
+						</div>
+						<div class="col col-x2">
+							<p>VP</p>
+						</div>
+						<div class="col-x2">
+							<div class="col col-x1">
+								<p>CR</p>
+							</div>
+							<div class="col col-x1">
+								<p>CH</p>
+							</div>
+						</div>
+						<div class="col col-vertical">
+							<p>$</p>
+						</div>
+						<div class="col col-vertical">
+							<p>RS</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<button class="blue-btn p-btn">Save Insight</button>
+		</div>
+	</div>
+	<div class="half-col columns">
+		<!-- NEW HYPOTHESIS DEEP DIVE MODAL -->
+		<div class="key-insight-modal">
+			<div class="one-col mb20">
+				<p class="mb20"><strong>Add New Key Insight</strong></p>
+				<textarea class="input-x1 textarea-input serif c-dark-purple" placeholder="Add your comment"></textarea>
+			</div>
+			<div class="one-col">
+				<p class="mb20"><strong>Add key insight to:</strong></p>
+				<div class="half-col mb20 right-gutter">
+					<select class="input-x1">
+						<option value="first">Select Canvas Area</option>
+						<option value="first">Value Proposition</option>
+					</select>
+				</div>
+				<div class="half-col mb20 column">
+					<select class="input-x1 active">
+						<option value="first">Select Hypothesis</option>
+						<option value="first">New Hypothesis:</option>
+					</select>
+				</div>
+				<div class="one-col mb20">
+					<input class="input-x1 c-dark-purple serif active" value="Confort and Time Saver">
+				</div>
+			</div>
+			<div class="one-col mb20">
+				<p class="mb20"><strong>This insight:</strong></p>
+				<div class="half-col">
+					<div class="one-col mb10">
+						<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character1" value="customer"><span class="check"></span></div>
+						<p>is a <strong>Must have</strong></p>
+					</div>
+					<div class="one-col mb10">
+						<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character1" value="customer"><span class="check"></span></div>
+						<p>is a <strong>Nice to have</strong></p>
+					</div>
+					<div class="one-col mb10">
+						<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character1" value="customer"><span class="check"></span></div>
+						<p><strong>Invalidates</strong> the Hypothesis</p>
+					</div>
+				</div>
+				<div class="half-col">
+					<div class="small-canvas-grid">
+						<div class="col col-x2">
+							<p>P</p>
+						</div>
+						<div class="col-x2">
+							<div class="col col-x1">
+								<p>A</p>
+							</div>
+							<div class="col col-x1">
+								<p>R</p>
+							</div>
+						</div>
+						<div class="col col-x2 active">
+							<p>VP</p>
+						</div>
+						<div class="col-x2">
+							<div class="col col-x1">
+								<p>CR</p>
+							</div>
+							<div class="col col-x1">
+								<p>CH</p>
+							</div>
+						</div>
+						<div class="col col-vertical">
+							<p>$</p>
+						</div>
+						<div class="col col-vertical">
+							<p>RS</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<button class="blue-btn p-btn">Save Insight</button>
+		</div>
+	</div>
+</div>
+
+<div class="one-col mb50">
+	<div class="two-col">
+		<!-- ADD COLLABORATOR MODAL -->
+		<div class="add-collaborator-modal" style="background-image: url('img/bg-collaborators.png');">
+			<button class="dark-gray-close-btn"></button>
+			<h2 class="c-dark-purple serif mb20">Add Collaborators to your Canvas</h2>
+			<p class="c-dark-purple mb20"><strong>People</strong></p>
+			<div class="one-col mb20">
+				<div class="input-x1 c-dark-purple tags_1"></div>
+				<button class="green-btn">Invite</button>
+			</div>
+			<div class="one-col">
+				<p class="c-dark-purple mb20"><strong>Who access</strong></p>
+				<div class="scroll-content">
+					<div class="profile-thumb mb20">
+						<div class="img" style="background-image: url('img/profile1.png');"></div>
+						<div class="txt">
+							<p><strong>Jessica (you)</strong></p>
+							<p>jess@fomentogeek.com</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="two-col">
+		<!-- ADD COLLABORATOR MODAL -->
+		<div class="add-collaborator-modal" style="background-image: url('img/bg-collaborators.png');">
+			<button class="dark-gray-close-btn"></button>
+			<h2 class="c-dark-purple serif mb20">Add Collaborators to your Canvas</h2>
+			<p class="c-dark-purple mb20"><strong>People</strong></p>
+			<div class="one-col mb20">
+				<div class="input-x1 c-dark-purple tags_1"></div>
+				<button class="green-btn">Invite</button>
+			</div>
+			<div class="one-col">
+				<p class="c-dark-purple mb20"><strong>Who access</strong></p>
+				<div class="scroll-content">
+					<div class="profile-thumb mb20">
+						<div class="img" style="background-image: url('img/profile1.png');"></div>
+						<div class="txt">
+							<p><strong>Jessica (you)</strong></p>
+							<p>jess@fomentogeek.com</p>
+						</div>
+					</div>
+					<div class="profile-thumb mb20">
+						<div class="img" style="background-image: url('img/profile1.png');"></div>
+						<div class="txt">
+							<p><strong>Jessica (you)</strong></p>
+							<p>jess@fomentogeek.com</p>
+						</div>
+					</div>
+					<div class="profile-thumb mb20">
+						<div class="img" style="background-image: url('img/profile1.png');"></div>
+						<div class="txt">
+							<p><strong>Jessica (you)</strong></p>
+							<p>jess@fomentogeek.com</p>
+						</div>
+					</div>
+					<div class="profile-thumb mb20">
+						<div class="img" style="background-image: url('img/profile1.png');"></div>
+						<div class="txt">
+							<p><strong>Jessica (you)</strong></p>
+							<p>jess@fomentogeek.com</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="one-col">
+	<!-- ASIGN PRESENTATION MODAL -->
+	<div class="add-collaborator-modal">
+		<button class="dark-gray-close-btn"></button>
+		<h2 class="c-dark-purple serif mb20">Asign presentations</h2>
+		<div class="two-col mb20 columns">
+			<p class="c-dark-purple mb20"><strong>Due Date</strong></p>
+			<input type="text" class="input-x1 c-dark-purple" placeholder="1 de Enero 2017">
+		</div>
+		<div class="two-col mb20 columns">
+			<p class="c-dark-purple mb20"><strong>Link to Dropbox</strong></p>
+			<input type="text" class="input-x1 c-dark-purple" placeholder="http://dropbox.com/rickroll">
+		</div>
+		<div class="two-col mb20 columns">
+			<p class="c-dark-purple mb20"><strong>Syllabus theme</strong> (optional)</p>
+			<select class="input-x1">
+				<option value="first">None</option>
+			</select>
+		</div>
+		<div class="one-col">
+			<p class="c-dark-purple mb20"><strong>Select Team(s)</strong></p>
+			<div class="scroll-content mb20">
+				<div class="one-col mb10">
+					<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character2" value="customer"><span class="check"></span></div>
+					<p class="c-dark-purple-opacity"><strong>New Dog Food</strong></p>
+				</div>
+				<div class="one-col mb10">
+					<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character2" value="customer"><span class="check"></span></div>
+					<p class="c-dark-purple-opacity"><strong>Social Project</strong></p>
+				</div>
+				<div class="one-col mb10">
+					<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character2" value="customer"><span class="check"></span></div>
+					<p class="c-dark-purple-opacity"><strong>Healtcare App</strong></p>
+				</div>
+				<div class="one-col mb10">
+					<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character2" value="customer"><span class="check"></span></div>
+					<p class="c-dark-purple-opacity"><strong>Job Finder App</strong></p>
+				</div>
+				<div class="one-col mb10">
+					<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character2" value="customer"><span class="check"></span></div>
+					<p class="c-dark-purple-opacity"><strong>Tinder for Lawmaking</strong></p>
+				</div>
+			</div>
+			<button class="green-btn">Asign</button>
+		</div>
+	</div>
+</div>
+
+
 <!-- LIBRARIES -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="js/jquery.mCustomScrollbar.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="js/jquery.tagsinput.js"></script>
 <script src="js/scripts.js"></script>
 
 </body>
