Add button on modal add collaborators

--- a/pop-ups.html
+++ b/pop-ups.html
@@ -822,7 +822,7 @@
 
 
 <div class="one-col mb50 p24">
-	<div class="half-col columns">
+	<div class="two-col columns">
 		<!-- NEW HYPOTHESIS DEEP DIVE MODAL -->
 		<div class="key-insight-modal">
 			<div class="one-col mb20">
@@ -894,7 +894,7 @@
 			<button class="blue-btn p-btn">Save Insight</button>
 		</div>
 	</div>
-	<div class="half-col columns">
+	<div class="two-col columns">
 		<!-- NEW HYPOTHESIS DEEP DIVE MODAL -->
 		<div class="key-insight-modal">
 			<div class="one-col mb20">
@@ -1006,7 +1006,7 @@
 			<p class="c-dark-purple mb20"><strong>People</strong></p>
 			<div class="one-col mb20">
 				<div class="input-x1 c-dark-purple tags_1"></div>
-				<button class="green-btn">Invite</button>
+				<button class="green-btn m-right">Invite</button><button class="c-green"><p>You've <strong>invitedpedro@fomentogeek.com</strong></p></button>
 			</div>
 			<div class="one-col">
 				<p class="c-dark-purple mb20"><strong>Who access</strong></p>
